[tool.black]
line-length = 79
target-version = ["py310"]
exclude = """
(
  /(
      /.git
    | /.garbage
    | /.github
    | /.run
    | /.venv
  )/
)
"""


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"


[tool.pytest.ini_options]
cache_dir = ".garbage/pytest/"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "functional",
    "integration",
    "unit",
]
testpaths = [
    "src/alpha",
    "tests",
]
addopts = "--cov --no-cov-on-fail --cov-fail-under=0"


[tool.mypy]
cache_dir = ".garbage/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = ["src", "tests",]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "asyncpg",
    "uvicorn",
]


[tool.poetry]
authors = ["Alexander Sidorov <alexander@sidorov.dev>"]
description = "A template for web project"
license = "MIT"
name = "alpha"
version = "2022.06.15"

[tool.poetry.dependencies]
asyncpg = "^0.25.0"
attrs = "^21.4.0"
click = "^8.1.3"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
httpx = "^0.23.0"
orjson = "^3.7.5"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
python = "^3.10"
python-dotenv = "^0.20.0"
rich = "^12.4.4"
sentry-sdk = "^1.5.12"
structlog = "^21.5.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
devtools = {extras = ["pygments"], version = "^0.8.0"}
dlint = "^0.12.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.0"
flake8-dashboard = "^0.1.4"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.2.1"
flake8-executable = "^2.1.1"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.1.1"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
httpie = "^3.2.1"
ipython = "^8.4.0"
isort = "^5.10.1"
mkdocs-material = "^8.3.8"
mypy = "^0.961"
pep8-naming = "^0.13.0"
pudb = "^2022.1.1"
pylint = "^2.14.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
